# codenames

./: .gitignore  Cargo.toml
resources/: wordlist
src/: game.rs  main.rs  map.rs  players.rs
